--- a/index.html
+++ b/index.html
@@ -28,17 +28,9 @@
 
 
     <p><strong>stay tunned for new recommendations!</strong></p>
-<<<<<<< HEAD
-    <p><strong>and for any questions contact us via oue email</strong></p>
+    <p><strong>and for any questions contact us via our email</strong></p>
 
   <script src="JavaScript/1st.js"></script>
 
-=======
-    <p><strong>and for any questions contact us via oue email</stro></p>
-
-
-
-    <img src="">
->>>>>>> cf354d9711d926c6d80dcccb54524a088c1fcdaf
   </body>
 </html>
