--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <p><strong>stay tunned for new recommendations!</strong></p>
     <p><strong>and for any questions contact us via our email</strong></p>
 
-  <script src="JavaScript/1st.js"></script>
+  <script src="JavaScript/lab04.js"></script>
 
   </body>
 </html>
